fix: font and filter alignment

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -8,6 +8,7 @@ body {
     padding: 0;
     width: 100%;
     height: 100vh;
+    font-family: 'DM Sans', sans-serif;
 }
 
 a {
@@ -484,6 +485,7 @@ header .logo {
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+    align-items: center;
     margin: 20px 0;
     font-size: 18px;
     font-weight: 700;
